# Qt6Example2

./: CMakeLists.txt  README.md
qml/: CMakeLists.txt  assets.qrc  main.qml  qml.qrc
qml/components/: ActionButton.qml  BackgroundImage.qml  DataList.qml  ErrorMessage.qml  Finance.qml  Speed.qml
src/: CMakeLists.txt  backend.cpp  backend.h  datamodel.cpp  datamodel.h  dataproducerbase.cpp  dataproducerbase.h  dataserver.cpp  dataserver.h  financedataproducer.cpp  financedataproducer.h  main.cpp  prducerfactory.cpp  prducerfactory.h  speeddataproducer.cpp  speeddataproducer.h
